--- a/index.html
+++ b/index.html
@@ -190,3 +190,18 @@
 </body>
 
 </html>
+
+
+<div class="container">
+	<div class="row">
+	  <div class="col-sm">
+		One of three columns
+	  </div>
+	  <div class="col-sm">
+		One of three columns
+	  </div>
+	  <div class="col-sm">
+		One of three columns
+	  </div>
+	</div>
+  </div>
